@@ -654,21 +654,6 @@ class SMTPHandler(logging.Handler):
         """
         return self.subject
 
-    weekdayname = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
-
-    monthname = [None,
-                 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-                 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
-
-    def date_time(self):
-        """Return the current date and time formatted for a MIME header."""
-        year, month, day, hh, mm, ss, wd, y, z = time.gmtime(time.time())
-        s = "%s, %02d %3s %4d %02d:%02d:%02d GMT" % (
-                self.weekdayname[wd],
-                day, self.monthname[month], year,
-                hh, mm, ss)
-        return s
-
     def emit(self, record):
         """
         Emit a record.
@@ -677,6 +662,7 @@ class SMTPHandler(logging.Handler):
         """
         try:
             import smtplib
+            from email.Utils import formatdate
             port = self.mailport
             if not port:
                 port = smtplib.SMTP_PORT
@@ -686,7 +672,7 @@ class SMTPHandler(logging.Handler):
                             self.fromaddr,
                             string.join(self.toaddrs, ","),
                             self.getSubject(record),
-                            self.date_time(), msg)
+                            formatdate(), msg)
             smtp.sendmail(self.fromaddr, self.toaddrs, msg)
             smtp.quit()
         except:
